--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="user"
-            type="com.example.emmar_assignment.ui.entity.User" />
+            type="com.example.emmar_assignment.ui.database.entity.User" />
 
     </data>
 
