--- a/app/src/main/res/layout/single_list_item.xml
+++ b/app/src/main/res/layout/single_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="user"
-            type="com.example.emmar_assignment.ui.entity.User" />
+            type="com.example.emmar_assignment.ui.database.entity.User" />
 
     </data>
 
